// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FadeTransition/> should display notification 1`] = `"<div notification="[object Object]">notification</div>"`;

exports[`<FadeTransition/> should display notification 2`] = `
[
  [
    [
      {
        "opacity": 0,
      },
      {
        "opacity": 1,
      },
    ],
    {
      "duration": 300,
      "fill": "forwards",
    },
  ],
]
`;

exports[`<FadeTransition/> should display notification 3`] = `"<div notification="[object Object]">notification</div>"`;

exports[`<FadeTransition/> should display notification 4`] = `
[
  [
    [
      {
        "maxHeight": "150px",
      },
      {
        "margin": 0,
        "maxHeight": 0,
        "opacity": 0,
      },
    ],
    {
      "duration": 300,
      "fill": "forwards",
    },
  ],
]
`;
